--- a/view/frontend/templates/product/compare/sidebar.phtml
+++ b/view/frontend/templates/product/compare/sidebar.phtml
@@ -16,7 +16,7 @@
                 <strong class="product-item-name">
                     <a data-bind="attr: {href: product_url}, html: name" class="product-item-link"></a>
                 </strong>
-                <a href="#" data-bind="attr: {'data-ajax-post': remove_url}" title="<?php /* @escapeNotVerified */ echo __('Remove This Item') ?>" class="action delete">
+                <a href="#" data-bind="attr: {'data-ajax-post': remove_data}" title="<?php /* @escapeNotVerified */ echo __('Remove This Item') ?>" class="action delete">
                     <span><?php /* @escapeNotVerified */ echo __('Remove This Item') ?></span>
                 </a>
             </li>
